[package]
name = "giphy-api-lite"
version = "0.1.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "GIPHY API"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/giphy-rs"
homepage = "https://github.com/bk-rs/giphy-rs"
documentation = "https://docs.rs/giphy-api-lite"
keywords = []
categories = []
readme = "README.md"

[dependencies]
http-api-client-endpoint = { version = "0.2" }

serde = { version = "1", default-features = false, features = ["std", "derive"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
serde-enum-str = { version = "0.3", default-features = false }
serde-aux = { version = "4", default-features = false }
url = { version = "2", default-features = false, features = ["serde"] }

serde_json = { version = "1", default-features = false, features = ["std"] }

thiserror = { version = "1", default-features = false }
